--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,14 @@
 /* GENERAL */
 section {
   padding: 70px 17% 60px;
-  height: 100vh;
+}
+
+img {
+  width: 100%;
+}
+
+.section--green {
+  background-color: var(--green-100);
 }
 
 /* HOME */
@@ -49,7 +56,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url(./assets/background.jpg);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url(./assets/background.jpeg);
   background-size: cover;
   background-position: bottom center;
 }
@@ -64,6 +71,62 @@ section {
   font-size: 19px;
   color: var(--white);
   width: 50%;
+}
+
+.section-last-news-content {
+  display: flex;
+}
+
+.card-box {
+  position: relative;
+  padding: 30px;
+}
+
+.card-box__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.card-box__text {
+  display: flex;
+  align-items: center;
+}
+
+.card-box-text__title {
+  font-weight: bold;
+  font-size: 28px
+}
+
+.section-last-news__container {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 6.6vh);
+  /* border: 2px solid red; */
+}
+
+.section-last-news__container .card-box:nth-child(1) {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 9;
+}
+
+.section-last-news__container .card-box:nth-child(2) {
+  grid-column-start: 6;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+.section-last-news__container .card-box:nth-child(3) {
+  grid-column-start: 6;
+  grid-column-end: 9;
+  grid-row-start: 5;
+  grid-row-end: 9;
 }
 
 @media screen and (max-width: 790px) {
@@ -90,7 +153,6 @@ section {
 
 .about__paragraph {
   text-align: justify;
-  width: 80%;
 }
 
 .about__paragraph--center {
@@ -102,3 +164,51 @@ section {
   font-size: 20px
 }
 
+/* FOOTER */
+
+footer {
+  background-color: var(--green-700);
+  width: 100%;
+  color: var(--white);
+}
+
+.footer-content {
+  padding: 3rem 3.5rem;
+  color: var(--white);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.footer-content__contatcs h3 {
+  font-weight: bold;
+}
+
+.footer-content__contatcs p {
+  width: 70%;
+}
+
+.footer-content__pages ul {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-content__pages .pages-links li a {
+  text-decoration: none;
+  color: var(--white);
+}
+
+.footer-content__pages .pages-links li a:hover {
+  color: var(--active-bg-color);
+}
+
+.footer-content__pages .pages-links li {
+  padding: 4px 0;
+}
+
+@media screen and (max-width: 790px) {
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+}
