add news design

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,18 @@
 
 :root {
   --green-100: #6d9773;
+  --green-200: #1b6651;
   --green-700: #0c3a2d;
   --active-bg-color: #ffb902;
   --white: #fff;
   --black: #000;
   --h1-font: 5rem;
-  --h2-font: 3.5rem;
+  --h2-font: 3.2rem;
   --h3-font: 2rem;
   --p-font: 16px;
   --transition-normal: all 0.2 ease;
   --new-title-color: #fff;
+  --border: 1px solid #d9d9d9;
 }
 
 * {
@@ -32,7 +34,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--green-700);
+  background-color: var(--green-200);
   /* color of the scroll thumb */
   border-radius: 20px;
   /* roundness of the scroll thumb */
@@ -85,6 +87,14 @@ img {
   color: var(--new-title-color);
 }
 
+.card-box-image__gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
+}
 
 .card-box__image img {
   width: 100%;
@@ -99,27 +109,35 @@ img {
 .card-box__text {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: start;
+  align-items: baseline;
   position: absolute;
   left: 0;
   bottom: 0;
   padding: 20px 30px;
-  text-shadow: 2px 2px 3px #000;
+  text-shadow: 2px 2px 2px #000;
 }
-
 
 .card-box-text__title {
   font-weight: bold;
-  font-size: 2.5rem
+  text-decoration: none;
+  color: var(--white);
+  font-size: 1.1rem;
 }
+
+.card-box-text__title:hover {
+  color: var(--green-100);
+}
+
 .card-box-text__time {
-  font-size: 1.3rem}
+  font-weight: 500;
+  font-size: 12px;
+}
 
 .section-last-news__container {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 6.6vh);
-  /* border: 2px solid red; */
   gap: 10px;
 }
 
@@ -136,22 +154,12 @@ img {
   grid-row-start: 1;
   grid-row-end: 5;
 }
+
 .section-last-news__container .card-box:nth-child(3) {
   grid-column-start: 6;
   grid-column-end: 9;
   grid-row-start: 5;
   grid-row-end: 9;
-}
-
-@media screen and (max-width: 790px) {
-  .hero__title {
-    font-size: var(--h2-font);
-  }
-
-  .hero__paragraph {
-    font-size: var(--p-font);
-    width: 100%;
-  }
 }
 
 /* ABOUT */
@@ -178,8 +186,72 @@ img {
   font-size: 20px
 }
 
-/* FOOTER */
+/* NEWS DETAIL */
+.news {
+  border: var(--border);
+  padding: 60px 90px;
+}
 
+.news__time {
+  font-size: 14px;
+}
+
+.news__title {
+  margin-bottom: 20px;
+  font-size: var(--h2-font);
+}
+
+.news .news__img img {
+  width: 60%;
+}
+
+/* ALL NEWS PAGE */
+
+.all-news {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.news-card {
+  position: relative;
+  padding: 5px 10px;
+}
+
+.news-card__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.news-card__text {
+  display: flex;
+  flex-direction: column;
+  border: var(--border);
+  height: 200px;
+  padding: 5px 7px;
+}
+
+.news-card-text__time {
+  font-size: 12px;
+}
+
+.news-card-text__title {
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--green-700);
+}
+
+.news-card-text__title:hover {
+  color: var(--green-200);
+}
+
+.news-card-text__description {
+  overflow: hidden;
+  text-overflow: ellipsis ellipsis;
+  font-size: 12px;
+}
+
+/* FOOTER */
 footer {
   background-color: var(--green-700);
   width: 100%;
@@ -219,7 +291,60 @@ footer {
   padding: 4px 0;
 }
 
+/* RESPONSIVE */
 @media screen and (max-width: 790px) {
+
+  /* HOME HERO */
+  .hero__title {
+    font-size: var(--h2-font);
+  }
+
+  .hero__paragraph {
+    font-size: var(--p-font);
+    width: 100%;
+  }
+
+  /* ALL NEWS PAGE */
+  .all-news {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .news-card {
+    position: relative;
+    padding: 5px 10px;
+  }
+
+  .news-card__text {
+    display: flex;
+    flex-direction: column;
+    border: var(--border);
+    height: 200px;
+    padding: 5px 7px;
+  }
+
+  .news-card-text__time {
+    font-size: 12px;
+  }
+
+  .news-card-text__title {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--green-700);
+  }
+
+  .news-card-text__title:hover {
+    color: var(--green-200);
+  }
+
+  .news-card-text__description {
+    overflow: hidden;
+    text-overflow: ellipsis ellipsis;
+    font-size: 12px;
+  }
+
+  /* FOOTER */
   .footer-content {
     display: flex;
     flex-direction: column;
