--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,27 @@ img {
   background-color: var(--green-100);
 }
 
+.section__title {
+  font-size: var(--h3-font)
+}
+
+.button {
+  display: block;
+  text-decoration: none;
+  background-color: var(--active-bg-color);
+  padding: 15px 10px;
+  width: max-content;
+  margin: 20px 0;
+  border-radius: 10px;
+  font-size: 14px;
+  color: #000;
+}
+
+.button:hover {
+  color: #fff;
+  background-color: #9c7c2b;
+}
+
 /* HOME */
 .hero {
   height: 90vh;
@@ -77,6 +98,7 @@ img {
 }
 
 /* HOME NEWS */
+
 .card-box {
   position: relative;
   padding: 30px;
@@ -167,6 +189,8 @@ img {
 
 .about__title {
   font-size: var(--h3-font);
+  font-weight: bold;
+  margin-bottom: 25px;
 }
 
 .about__paragraph {
@@ -194,11 +218,13 @@ img {
 
 .news__title {
   margin-bottom: 20px;
-  font-size: var(--h2-font);
+  font-size: 2.2rem;
+  font-weight: bold;
 }
 
 .news .news__img img {
-  width: 60%;
+  width: 40%;
+  margin-bottom: 20px;
 }
 
 /* ALL NEWS PAGE */
@@ -224,7 +250,7 @@ img {
   flex-direction: column;
   border: var(--border);
   height: 200px;
-  padding: 5px 7px;
+  padding: 14px 20px;
 }
 
 .news-card-text__time {
@@ -327,6 +353,31 @@ footer {
     grid-column-end: 9;
     grid-row-start: 9;
     grid-row-end: 13;
+  }
+
+  /* NEWS DETAIL */
+  .section-news {
+    padding: 0;
+  }
+
+  .news {
+    border: var(--border);
+    padding: 40px 80px;
+  }
+
+  .news__time {
+    font-size: 14px;
+  }
+
+  .news__title {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .news .news__img img {
+    width: 100%;
+    margin-bottom: 20px;
   }
 
   /* ALL NEWS PAGE */
